objects/DSRDataDefinition__c.object
<CustomObject>
    <fields>
        <fullName>DSRType__c</fullName>
        <label>DSR Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCE</fullName>
                    <default>true</default>
                    <label>SCE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FitCategory__c</fullName>
        <label>Fit Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Requirements Not Fixed</fullName>
                </value>
                <value>
                    <fullName>Perfect Fit</fullName>
                </value>
                <value>
                    <fullName>Custom Integration Required</fullName>
                </value>
                <value>
                    <fullName>Missing functionality</fullName>
                </value>
                <value>
                    <fullName>More functionality than required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Virtual User</fullName>
                </value>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Overview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfferPlatformType__c</fullName>
        <label>Offer/Platform Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureConnect On Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage On Premise</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentDefinitionID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Definition ID</label>
        <referenceTo>DSRDataDefinition__c</referenceTo>
        <relationshipLabel>DSR Data Definition</relationshipLabel>
        <relationshipName>DSR_Data_Definition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubModule__c</fullName>
        <label>Sub Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vision Activity</fullName>
                </value>
                <value>
                    <fullName>Delivery Requirements</fullName>
                </value>
                <value>
                    <fullName>Service Transition</fullName>
                </value>
                <value>
                    <fullName>Virtual User Type</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Document Source</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Discovery Activity</fullName>
                </value>
                <value>
                    <fullName>Design Activity</fullName>
                </value>
                <value>
                    <fullName>Design General Background</fullName>
                </value>
                <value>
                    <fullName>Offer Type</fullName>
                </value>
                <value>
                    <fullName>Platform Type</fullName>
                </value>
                <value>
                    <fullName>Design Specific Attachment</fullName>
                </value>
                <value>
                    <fullName>Technical Design Activities</fullName>
                </value>
                <value>
                    <fullName>Business Design - Fit%</fullName>
                </value>
                <value>
                    <fullName>Technical Design - Fit%</fullName>
                </value>
                <value>
                    <fullName>Technical Design - Deployment Topology</fullName>
                </value>
                <value>
                    <fullName>Technical Design - Architectural Blue Print</fullName>
                </value>
                <value>
                    <fullName>Functional Use Case</fullName>
                </value>
                <value>
                    <fullName>Service Transition Activity</fullName>
                </value>
                <value>
                    <fullName>Vision Link</fullName>
                </value>
                <value>
                    <fullName>Discovery Link</fullName>
                </value>
                <value>
                    <fullName>Design Link</fullName>
                </value>
                <value>
                    <fullName>Delivery Link</fullName>
                </value>
                <value>
                    <fullName>Business Design Fit%</fullName>
                </value>
                <value>
                    <fullName>Technical Design Fit%</fullName>
                </value>
                <value>
                    <fullName>Business Design Fit Categeory</fullName>
                </value>
                <value>
                    <fullName>Technical Design Fit Category</fullName>
                </value>
                <value>
                    <fullName>Region/Sub Region</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>URL Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>DSR Data Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>SubModule__c</columns>
        <columns>OfferPlatformType__c</columns>
        <columns>Header__c</columns>
        <columns>IsActive__c</columns>
        <columns>URL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DSR-DDF-{000000}</displayFormat>
        <label>DSR Data Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DSR Data Definition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>